Changed column layout

--- a/index.html
+++ b/index.html
@@ -164,14 +164,15 @@
     </div>
   </section>
 
+  <!-- About Section -->
   <section id="about" class="whiteSection">
     <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          <img class="about-picture img-thumbnail shadow-sm" src="images/pat.jpg" alt="">
+        <div class="col-md-6">
+          <img class="about-picture img-thumbnail shadow" src="images/pat.jpg" alt="">
 
         </div>
-        <div class="col">
+        <div class="col-md-6">
           <h3>Hello</h3>
           <p class="about-paragraph">Im Pat. Thanks for checking out my website. I've spent years developing my skills in all aspects of home maintenance. </p>
           <p>I know gardeing, pool maintenance, tiling, carpentry, fence building, electrical and plumbing. I prefer to work alone where possible. My motto is measure twice, cut once. </p>
