--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="carousel-item">
           <img class="img-thumbnail pictures-picture shadow-lg w-75 " src="images/previousWork/tiling4.jpeg" alt="tiling outdoors">
-          <div><em>Tiling Outdoors</em></div>cta
+          <div><em>Tiling Outdoors</em></div>
         </div>
         <div class="carousel-item">
           <img class="img-thumbnail pictures-picture shadow-lg w-75 " src="images/previousWork/kitchen_cupboards.jpg" alt="kitcchen">
