changed images and carousel autoplay

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <img class="navbar-img" src="images/painbrush-inside-a-house2.svg"><a class="navbar-brand" href="#"> pats home</a>
+        <img class="navbar-img" src="images/painbrush-inside-a-house2.svg"><a class="navbar-brand" href="#"> pat's home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -103,7 +103,7 @@
 
   <!-- Pictures -->
   <section id="pictures" class="coloredSection">
-    <div id="picture-carousel" class="carousel slide carousel-fade " data-ride="carousel">
+    <div id="picture-carousel" class="carousel slide carousel-fade " data-ride="false">
       <div class="carousel-inner container-fluid">
         <div class="carousel-item active">
           <img class="img-thumbnail pictures-picture shadow-lg w-50" src="images/previousWork/bathroom_renovation.jpg" alt="dog-profile">
@@ -128,13 +128,13 @@
       <a class="carousel-control-next" href="#picture-carousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
       </a>
-      <ol class="carousel-indicators">
+      <!-- <ol class="carousel-indicators">
         <li data-target="#picture-carousel" data-slide-to="0"> <img class="d-block w-100" src="images/previousWork/bathroom_renovation.jpg" class="img-fluid"></li>
         <li data-target="#picture-carousel" data-slide-to="1"><img class="d-block w-100" src="images/previousWork/tiling3.jpeg" class="img-fluid"></li>
         <li data-target="#picture-carousel" data-slide-to="2"><img class="d-block w-100" src="images/previousWork/tiling4.jpeg" class="img-fluid"></li>
         <li data-target="#picture-carousel" data-slide-to="3"><img class="d-block w-100" src="images/previousWork/kitchen_cupboards.jpg" class="img-fluid"></li>
 
-      </ol>
+      </ol> -->
     </div>
   </section>
 
@@ -146,12 +146,12 @@
       <div class="carousel-inner container-fluid">
         <div class="carousel-item active">
           <h2 class="small-heading">"Pat is an excellent communicator. He gets the job done right, the first time"</h2>
-          <img class="testimonial-picture img-thumbnail" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-picture shadow-sm" src="images/dog-img.jpg" alt="dog-profile">
           <em>Jonathan, Morningside</em>
         </div>
         <div class="carousel-item">
           <h2 class="small-heading">"Pat does amazing work and delivers on time, everytime"</h2>
-          <img class="testimonial-picture" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-picture shadow-sm" src="images/lady-img.jpg" alt="lady-profile">
           <em>Gugu, Durban North</em>
         </div>
       </div>
@@ -169,7 +169,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-          <img class="about-picture img-thumbnail shadow" src="images/pat.jpg" alt="">
+          <img class="about-picture img-thumbnail shadow-lg" src="images/pat.jpg" alt="">
 
         </div>
         <div class="col-md-6">
