--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <!-- Main Image -->
         <div class="col-lg-6 ">
-          <img class="main-image img-fluid" src="images/maingif.gif" alt="bathroom before and after">
+          <img class="main-image img-fluid img-thumbnail" src="images/maingif.gif" alt="bathroom before and after">
         </div>
       </div>
     </div>
@@ -174,9 +174,9 @@
         </div>
         <div class="col-md-6">
           <h3>Hello</h3>
-          <p class="about-paragraph">Im Pat. Thanks for checking out my website. I've spent years developing my skills in all aspects of home maintenance. </p>
-          <p>I know gardeing, pool maintenance, tiling, carpentry, fence building, electrical and plumbing. I prefer to work alone where possible. My motto is measure twice, cut once. </p>
-          <p>Give me a call for an obligation free quotation. </p>
+          <p class="about-paragraph lead">Im Pat. I've spent years developing my skills in all aspects of home maintenance. </p>
+          <p>I know landscaping, pool maintenance, tiling, carpentry, fence building, electrical and plumbing. I prefer to work alone where possible. My motto is measure twice, cut once. </p>
+          <p>Give me a call or whatsapp me to get in touch.</p>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@
   <!-- Call to Action -->
   <section id="cta" class="coloredSection">
     <div class="container-fluid">
-      <h1 class="big-heading">Contact Pat on 078 202 7032</h1>
+      <h1 class="big-heading">Contact me on 078 202 7032</h1>
       <a href="https://api.whatsapp.com/send?phone=27782027032&text=Hi%20Pat%20.I%20need%20some%20help%20with%20" class="btn btn-outline-light btn-lg download-button" target="_blank"><i class="fab fa-whatsapp fa-2x"
           style=" vertical-align: middle"></i> whatsapp</a>
     </div>
